# embedded-bsp-learning

./: .gitignore  BSP工程师完整学习路线.md  CLAUDE.md  ChatGPT提示词_实习搜索.md  LEARNING_ROADMAP.md  README.md  function_exercise.c  gen_doc.py  pointer_2d_exercise.c  pointer_arithmetic_exercise.c  嵌入式实习岗位分析.md
.claude/: settings.json
stm32h562_test/: CMakeLists.txt  STM32H562VITx_FLASH.ld
stm32h562_test/Core/Src/: main.c  startup_stm32h562xx.s
老大学习之路/: 快速参考.md
